--- a/html/static/style.css
+++ b/html/static/style.css
@@ -130,3 +130,21 @@ ul.list > li {
     padding: 20px;
     border: 2px dashed #fff;
 }
+
+@media only screen and (max-width: 800px) {
+    #grid {
+        width: 100%;
+        display: block;
+    }
+    .menu, #content {
+        width: 100% !important;
+        margin: 10px;
+    }
+    #menu-hide {
+        display: none;
+    }
+    #menu-main {
+        display: block;
+        width: 100%;
+    }
+}
