--- a/html/static/style.css
+++ b/html/static/style.css
@@ -78,21 +78,25 @@ a:hover {
     height: 100%;
 }
 
+h1, h2, h3, h4 {
+    text-align: center;
+}
+
 h1 {
     font-size: 40px;
-    text-align: center;
     margin: 20px 0;
 }
 
 h2 {
     font-size: 30px;
-    text-align: center;
     margin-bottom: 200px;
 }
 
 h3, h4 {
     font-size: 28px;
-    text-align: center;
+}
+h4 {
+    font-size: 24px;
 }
 
 strong {
